--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ email-validator==2.0.0
 python-dotenv==1.0.0
 Flask-Mail==0.9.1
 Werkzeug==2.3.7
-pandas==2.1.4
 openpyxl==3.1.2
 fpdf==1.7.2
 python-dateutil==2.8.2
 psycopg2-binary==2.9.7
-gunicorn==21.2.0 
+gunicorn==21.2.0
+xlrd==2.0.1 
