--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,6 @@ Werkzeug==2.3.7
 openpyxl==3.1.2
 fpdf==1.7.2
 python-dateutil==2.8.2
-psycopg[binary]==3.1.13
+psycopg[binary]
 gunicorn==21.2.0
 xlrd==2.0.1 
