--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,6 @@ Werkzeug==2.3.7
 openpyxl==3.1.2
 fpdf==1.7.2
 python-dateutil==2.8.2
-psycopg[binary]==3.1.13
+psycopg2-binary==2.9.9
 gunicorn==21.2.0
-xlrd==2.0.1
-playwright==1.40.0
 greenlet==3.0.1 
