--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,9 @@ WTForms==3.0.1
 email-validator==2.0.0
 python-dotenv==1.0.0
 Flask-Mail==0.9.1
-Werkzeug==2.3.7 
+Werkzeug==2.3.7
 openpyxl==3.1.2
-fpdf==1.7.2
 python-dateutil==2.8.2
-psycopg[binary]
+psycopg2-binary==2.9.9
 gunicorn==21.2.0
 xlrd==2.0.1 
