--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,6 @@ Flask-Mail==0.9.1
 Werkzeug==2.3.7
 openpyxl==3.1.2
 python-dateutil==2.8.2
-psycopg2-binary==2.9.9
+psycopg[binary]==3.2.9
 gunicorn==21.2.0
 xlrd==2.0.1 
